--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Xiexihai.GitHub.io : blog">
+    <meta name="description" content="紫心地瓜--前端博客 : blog">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Xiexihai.GitHub.io</title>
+    <title>紫心地瓜--前端博客</title>
   </head>
 
   <body>
@@ -18,13 +18,26 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/xiexihai">View on GitHub</a>
 
-          <h1 id="project_title">Xiexihai.GitHub.io</h1>
+          <h1 id="project_title">紫心地瓜--前端博客</h1>
           <h2 id="project_tagline">blog</h2>
 
         </header>
     </div>
 
-  
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
     
 
