--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <body>
 
      <ul>
-      <li><a href="https://xiexihai.github.io/photo">QQ空间相册</a><</li>
-      <li><a href="https://xiexihai.github.io/ww/slide">slide图片切换</a><</li>
-      <li><a href="https://xiexihai.github.io/ww/dropdown">dropdown导航下拉</a><</li>
-      <li><a href="https://xiexihai.github.io/ww/popup">popup弹窗</a><</li>
-      <li><a href="https://xiexihai.github.io/ww/tab">tab切换</a><</li>
+      <li><a href="https://xiexihai.github.io/photo">QQ空间相册</a></li>
+      <li><a href="https://xiexihai.github.io/ww/slide">slide图片切换</a></li>
+      <li><a href="https://xiexihai.github.io/ww/dropdown">dropdown导航下拉</a></li>
+      <li><a href="https://xiexihai.github.io/ww/popup">popup弹窗</a></li>
+      <li><a href="https://xiexihai.github.io/ww/tab">tab切换</a></li>
 
      </ul>
   
