--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="紫心地瓜--前端博客 : blog">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>紫心地瓜--前端博客</title>
+    <meta name="description" content="紫心地瓜-前端博客 : blog">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/app.css">
+    <title>紫心地瓜-前端博客</title>
   </head>
 
   <body>
-
-     <ul>
+    <ul class="container fn-clearfix">
       <li><a href="https://xiexihai.github.io/photo">QQ空间相册</a></li>
       <li><a href="https://xiexihai.github.io/ww/slide">slide图片切换</a></li>
       <li><a href="https://xiexihai.github.io/ww/dropdown">dropdown导航下拉</a></li>
       <li><a href="https://xiexihai.github.io/ww/popup">popup弹窗</a></li>
       <li><a href="https://xiexihai.github.io/ww/tab">tab切换</a></li>
-
-     </ul>
-  
-
+      <li><a href="https://xiexihai.github.io/scroll">图片滚动切换</a></li>
+      <li><a href="https://xiexihai.github.io/magnifier">图片放大镜</a></li>
+       <li><a href="https://xiexihai.github.io/waterfall">瀑布流</a></li>
+        <li><a href="https://xiexihai.github.io/shoppingCart">购物车</a></li>
+    </ul>
   </body>
 </html>
